--- a/front/src/app/drop-zone-page/drop-zone-page.component.html
+++ b/front/src/app/drop-zone-page/drop-zone-page.component.html
@@ -51,37 +51,30 @@
             </div>
             <p class="text-center">fichier chargé : {{torrentName}}</p>
 
-            <div class="w-2/5 m-auto mt-32">
+            <div class="w-full sm:w-2/5 m-auto mt-32">
                 <h3 class="text-center font-bold text-5xl mt-10">Meilleur Téléchargeur de Torrents</h3>
-                <p class="mt-5">Notre plateforme de téléchargement de torrents offre une solution efficace et conviviale
-                    pour accéder
-                    facilement à vos contenus favoris. En tant que service de plus en plus reconnu, notre site permet
-                    aux
-                    utilisateurs de télécharger des torrents en toute simplicité, garantissant une expérience fluide et
+                <p class="mt-5">
+                    Notre plateforme de téléchargement de torrents offre une solution efficace et conviviale
+                    pour accéder facilement à vos contenus favoris. En tant que service de plus en plus reconnu, notre site permet
+                    aux utilisateurs de télécharger des torrents en toute simplicité, garantissant une expérience fluide et
                     sécurisée pour profiter de leurs fichiers préférés hors ligne.
-
+                    <br><br>
                     Avec une interface intuitive et des fonctionnalités avancées, notre plateforme est rapidement
-                    devenue le
-                    choix de prédilection pour ceux qui cherchent à télécharger des fichiers de manière rapide et
-                    fiable.
-                    Compatible avec une large gamme d'appareils et de systèmes d'exploitation, notre service répond aux
-                    besoins
-                    variés des utilisateurs, qu'ils soient sur un ordinateur de bureau, un ordinateur portable, un
-                    smartphone ou
-                    une tablette.
-
+                    devenue le choix de prédilection pour ceux qui cherchent à télécharger des fichiers de manière rapide et
+                    fiable. Compatible avec une large gamme d'appareils et de systèmes d'exploitation, notre service répond aux
+                    besoins variés des utilisateurs, qu'ils soient sur un ordinateur de bureau, un ordinateur portable, un
+                    smartphone ou une tablette.
+                    <br><br>
                     Notre engagement envers la satisfaction des utilisateurs se traduit par des mises à jour régulières
-                    visant à
-                    améliorer la performance, la sécurité et la fiabilité de notre service. Grâce à des vitesses de
-                    téléchargement élevées et à une large sélection de torrents de haute qualité, vous pouvez profiter
-                    de vos
-                    fichiers sans interruption ni compromis sur la qualité. De plus, notre plateforme intègre des
-                    mesures de
+                    visant à améliorer la performance, la sécurité et la fiabilité de notre service. Grâce à des vitesses de
+                    téléchargement élevées et à une large sélection de torrents de haute qualité, vous pouvez profiter de vos
+                    fichiers sans interruption ni compromis sur la qualité. De plus, notre plateforme intègre des mesures de
                     sécurité robustes pour garantir la protection de vos données et une navigation sereine.
                 </p>
                 <p class="mt-5">Pour en savoir plus sur la sécurité des torrents, consultez notre <a
                         href="/guide-securite-torrents">Guide de Sécurité des Torrents</a>.</p>
             </div>
+            
         </section>
     </div>
 </body>
