--- a/front/src/app/drop-zone-page/drop-zone-page.component.html
+++ b/front/src/app/drop-zone-page/drop-zone-page.component.html
@@ -33,7 +33,7 @@
         </div>
 
         <section class="bg-slate-100 flex-grow">
-            <h2 class="text-center font-bold text-5xl mt-10">Torrent Downloader : Téléchargeur de fichiers torrents</h2>
+            <h2 class="text-center font-bold text-5xl mt-10">Torrent Downloader : Téléchargeur de fichiers torrent</h2>
             <h2 class="text-center font-bold text-2xl mt-2">Téléchargez vos fichiers torrent gratuitement et sans
                 logiciel tiers</h2>
 
