--- a/front/src/app/drop-zone-page/drop-zone-page.component.html
+++ b/front/src/app/drop-zone-page/drop-zone-page.component.html
@@ -51,30 +51,130 @@
             </div>
             <p class="text-center">fichier chargé : {{torrentName}}</p>
 
-            <div class="w-full sm:w-2/5 m-auto mt-32">
+            <div class="w-full sm:w-3/5 m-auto mt-32">
                 <h3 class="text-center font-bold text-5xl mt-10">Meilleur Téléchargeur de Torrents</h3>
                 <p class="mt-5">
                     Notre plateforme de téléchargement de torrents offre une solution efficace et conviviale
-                    pour accéder facilement à vos contenus favoris. En tant que service de plus en plus reconnu, notre site permet
-                    aux utilisateurs de télécharger des torrents en toute simplicité, garantissant une expérience fluide et
+                    pour accéder facilement à vos contenus favoris. En tant que service de plus en plus reconnu, notre
+                    site permet
+                    aux utilisateurs de télécharger des torrents en toute simplicité, garantissant une expérience fluide
+                    et
                     sécurisée pour profiter de leurs fichiers préférés hors ligne.
                     <br><br>
                     Avec une interface intuitive et des fonctionnalités avancées, notre plateforme est rapidement
-                    devenue le choix de prédilection pour ceux qui cherchent à télécharger des fichiers de manière rapide et
-                    fiable. Compatible avec une large gamme d'appareils et de systèmes d'exploitation, notre service répond aux
-                    besoins variés des utilisateurs, qu'ils soient sur un ordinateur de bureau, un ordinateur portable, un
+                    devenue le choix de prédilection pour ceux qui cherchent à télécharger des fichiers de manière
+                    rapide et
+                    fiable. Compatible avec une large gamme d'appareils et de systèmes d'exploitation, notre service
+                    répond aux
+                    besoins variés des utilisateurs, qu'ils soient sur un ordinateur de bureau, un ordinateur portable,
+                    un
                     smartphone ou une tablette.
                     <br><br>
                     Notre engagement envers la satisfaction des utilisateurs se traduit par des mises à jour régulières
-                    visant à améliorer la performance, la sécurité et la fiabilité de notre service. Grâce à des vitesses de
-                    téléchargement élevées et à une large sélection de torrents de haute qualité, vous pouvez profiter de vos
-                    fichiers sans interruption ni compromis sur la qualité. De plus, notre plateforme intègre des mesures de
+                    visant à améliorer la performance, la sécurité et la fiabilité de notre service. Grâce à des
+                    vitesses de
+                    téléchargement élevées et à une large sélection de torrents de haute qualité, vous pouvez profiter
+                    de vos
+                    fichiers sans interruption ni compromis sur la qualité. De plus, notre plateforme intègre des
+                    mesures de
                     sécurité robustes pour garantir la protection de vos données et une navigation sereine.
                 </p>
                 <p class="mt-5">Pour en savoir plus sur la sécurité des torrents, consultez notre <a
                         href="/guide-securite-torrents">Guide de Sécurité des Torrents</a>.</p>
+
+                <div class="mx-auto">
+                    <h2 class="text-center font-bold text-5xl mt-10 mb-5">FAQ - Torrent et Téléchargement</h2>
+
+                    <!-- Question 1 -->
+                    <div class="mb-6">
+                        <h2 class="text-xl font-semibold mb-2">Comment télécharger en toute sécurité avec un VPN ?</h2>
+                        <p class="text-gray-700">
+                            Utiliser un <strong>VPN</strong> est essentiel pour protéger votre <strong>adresse
+                                IP</strong> lors du <strong>téléchargement de torrents</strong>. Un VPN vous permet de
+                            masquer votre identité et de sécuriser votre connexion pour éviter tout suivi ou blocage par
+                            des tiers.
+                        </p>
+                    </div>
+
+                    <!-- Question 2 -->
+                    <div class="mb-6">
+                        <h2 class="text-xl font-semibold mb-2">Quels sont les meilleurs sites pour le streaming et le
+                            téléchargement direct ?</h2>
+                        <p class="text-gray-700">
+                            Les <strong>meilleurs sites</strong> pour le <strong>streaming</strong> et le
+                            <strong>téléchargement direct</strong> sont ceux qui offrent une grande variété de contenus
+                            tout en garantissant la sécurité de leurs utilisateurs. Il est recommandé d'utiliser des
+                            sites connus et fiables pour éviter les risques.
+                        </p>
+                    </div>
+
+                    <!-- Question 3 -->
+                    <div class="mb-6">
+                        <h2 class="text-xl font-semibold mb-2">Comment utiliser un fichier torrent pour télécharger des
+                            films ?</h2>
+                        <p class="text-gray-700">
+                            Un <strong>fichier torrent</strong> contient les informations nécessaires pour télécharger
+                            un contenu spécifique via un client torrent. Vous pouvez l'utiliser pour <strong>télécharger
+                                des films</strong> ou autres fichiers en utilisant des logiciels comme uTorrent ou
+                            BitTorrent.
+                        </p>
+                    </div>
+
+                    <!-- Question 4 -->
+                    <div class="mb-6">
+                        <h2 class="text-xl font-semibold mb-2">Comment contourner les restrictions Hadopi sur Pirate Bay
+                            ?</h2>
+                        <p class="text-gray-700">
+                            Pour accéder à <strong>Pirate Bay</strong> et d'autres sites similaires bloqués par
+                            <strong>Hadopi</strong>, vous pouvez utiliser un <strong>VPN</strong> pour changer votre
+                            emplacement virtuel. Cela vous permet de contourner les restrictions et d'accéder aux
+                            contenus bloqués.
+                        </p>
+                    </div>
+
+                    <!-- Question 5 -->
+                    <div class="mb-6">
+                        <h2 class="text-xl font-semibold mb-2">Quels sont les meilleurs sites de téléchargement pour
+                            films, séries, et ebooks en 2024 ?</h2>
+                        <p class="text-gray-700">
+                            Les <strong>meilleurs sites de téléchargement</strong> en 2024 proposent une large gamme de
+                            <strong>films</strong>, <strong>séries</strong> et <strong>ebooks</strong>. Pour maximiser
+                            vos chances de trouver le contenu souhaité, il est recommandé d'utiliser des
+                            <strong>trackers</strong> privés ou des sites de torrents bien connus comme
+                            <strong>T411</strong>.
+                        </p>
+                    </div>
+
+                    <!-- Question 6 -->
+                    <div class="mb-6">
+                        <h2 class="text-xl font-semibold mb-2">Pourquoi cacher votre adresse IP est-il crucial lors du
+                            téléchargement de fichiers torrents ?</h2>
+                        <p class="text-gray-700">
+                            Cacher votre <strong>adresse IP</strong> est crucial pour protéger votre vie privée lors du
+                            <strong>téléchargement de fichiers torrents</strong>. Une <strong>adresse IP</strong>
+                            visible peut exposer votre activité en ligne à des tiers, y compris aux autorités et aux
+                            hackers.
+                        </p>
+                    </div>
+
+                    <!-- Question 7 -->
+                    <div class="mb-6">
+                        <h2 class="text-xl font-semibold mb-2">Quel est le meilleur moteur de recherche pour trouver un
+                            torrent français ?</h2>
+                        <p class="text-gray-700">
+                            Le <strong>meilleur moteur de recherche</strong> pour trouver un <strong>torrent
+                                français</strong> dépend de vos besoins. Des sites spécialisés en contenu francophone
+                            offrent souvent des options filtrées pour les torrents en français, ce qui peut grandement
+                            faciliter vos recherches.
+                        </p>
+                    </div>
+                </div>
             </div>
-            
+
+
+
+
+
         </section>
     </div>
 </body>
