--- a/front/src/app/drop-zone-page/drop-zone-page.component.html
+++ b/front/src/app/drop-zone-page/drop-zone-page.component.html
@@ -81,7 +81,7 @@
                 </p>
                 <p class="mt-5">Pour en savoir plus sur la sécurité des torrents, consultez notre <a
                         href="/guide-securite-torrents">Guide de Sécurité des Torrents</a>.</p>
-                        <app-question-reponse></app-question-reponse>
+                        <app-question-reponse class="mt-10"></app-question-reponse>
             </div>
         </section>
     </div>
