--- a/front/src/app/drop-zone-page/drop-zone-page.component.html
+++ b/front/src/app/drop-zone-page/drop-zone-page.component.html
@@ -49,7 +49,7 @@
                     Télécharger
                 </button>
             </div>
-            <p class="text-center">fichier chargée : {{torrentName}}</p>
+            <p class="text-center">fichier chargé : {{torrentName}}</p>
 
             <div class="w-full sm:w-3/5 m-auto mt-32">
                 <h3 class="text-center font-bold text-5xl mt-10">Meilleur Téléchargeur de Torrents</h3>
