--- a/front/src/app/drop-zone-page/drop-zone-page.component.html
+++ b/front/src/app/drop-zone-page/drop-zone-page.component.html
@@ -49,7 +49,15 @@
                     Télécharger
                 </button>
             </div>
-            <p class="text-center">fichier chargé : {{torrentName}}</p>
+            <p class="text-center">Fichier chargé : {{torrentName}}</p>
+
+            <div ngif="progress != 0">
+                <div>
+                    <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 w-1/6 m-auto">
+                        <div class="bg-blue-600 h-2.5 rounded-full" [style.width]="progress + '%'"></div>
+                    </div>
+                </div>
+            </div>
 
             <div class="w-full sm:w-3/5 m-auto mt-32">
                 <h3 class="text-center font-bold text-5xl mt-10">Meilleur Téléchargeur de Torrents</h3>
@@ -81,7 +89,7 @@
                 </p>
                 <p class="mt-5">Pour en savoir plus sur la sécurité des torrents, consultez notre <a
                         href="/guide-securite-torrents">Guide de Sécurité des Torrents</a>.</p>
-                        <app-question-reponse class="mt-10"></app-question-reponse>
+                <app-question-reponse class="mt-10"></app-question-reponse>
             </div>
         </section>
     </div>
