fix https backend

--- a/front/src/app/drop-zone-page/drop-zone-page.component.html
+++ b/front/src/app/drop-zone-page/drop-zone-page.component.html
@@ -53,7 +53,7 @@
 
             <div ngif="progress != 0">
                 <div>
-                    <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 w-1/6 m-auto">
+                    <div class="bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 w-1/6 m-auto">
                         <div class="bg-blue-600 h-2.5 rounded-full" [style.width]="progress + '%'"></div>
                     </div>
                 </div>
